--- a/TODO
+++ b/TODO
@@ -3,6 +3,8 @@
   [ ] if ajusting "order in usdt" field, the rest should update
   [ ] if ajusting "order in btc" field, the rest should update
 
+[ ] let user decide if TP/SL is market/limit
+
 [ ] place more notifications
   [ ] e.d: fetch balance doesnt have one yet
 
@@ -14,6 +16,7 @@
 
 [ ] try to calculate max leverage instead of min leverage instead
   [ ] never go beyond max leverage so user can get liquidated
+  [ ] NOTE:: add fees to leverage calculation. the higher the leverage, the higher the fees
   [ ] Take fees in consitherations
   [ ] make sure to never go beyond max leverage
 
@@ -27,3 +30,4 @@
 [ ] Plot previous trades on chart
 [ ] plot current trade on chart
 [ ] disable context menu popup of long/short order drawing
+[ ] add multiple TP
