--- a/TODO
+++ b/TODO
@@ -1,15 +1,8 @@
-[ ] make order by qty computed in zustand
-  [ ] get maximum contracts out of bybit api & show error if exceed
-  [ ] if ajusting "order in usdt" field, the rest should update
-  [ ] if ajusting "order in btc" field, the rest should update
+[ ] fix calculation error: exceeded balance (not with * 0.01)
+[ ] take some trades to see if the 1% really works (testing if it works)
 
 
 [ ] show liquidation line on chart
-[ ] NOTE:: add fees to leverage calculation. the higher the leverage, the higher the fees
-[ ] Take fees in consitherations
-[ ] make sure to never go beyond max leverage
-
-[ ] make "pnl of current trade" work
 
 --- FUTURE
 
