--- a/TODO
+++ b/TODO
@@ -24,6 +24,7 @@ maybe ask chatgpt
 can be, spread? or slippage?
 ask chatgpt what it could be, maybe we need add calculatePotentialProfit makerfees *2? im not sure
 
+maybe: we should do the fees *2 everywhere, for opening and closing
 
 
 
