--- a/TODO
+++ b/TODO
@@ -12,7 +12,10 @@ ask chatgpt what it could be, maybe we need add calculatePotentialProfit makerfe
 maybe: we should do the fees *2 everywhere, for opening and closing
 
 
-
+----
+[ ] on minute chart, the stream wont go to the next bar, so if time goes from 9:15 to 9:16 i expect a new bar but its not doing that
+[ ] use cryptocompare /v2/ endpoint
+[ ] fix tickersize dynamic
 
 
 
